Implementation of user registration endpoint
